# python4poets

./: .gitignore  1_Python_for_Poets.ipynb  2_Letters_and_numbers,_strings_and_integers.ipynb  3_Lists_and_dictionaries.ipynb  4_Conditionals_Functions.ipynb  5_Functions_continued.ipynb  6_Poem_use_case.ipynb  Copy_of_5_Functions_continued.ipynb  LICENSE  PyforPo1.ipynb  README.md  python4poets.py  requirements.txt  setup.cfg  setup.py
data/: nouns.txt
etc/notebooks/: 1A-Code-as-transformation.ipynb  1B-Code-as-abstraction.ipynb
etc/notebooks/backups/: Python_for_Poets copy.ipynb
notebooks/: 1-Python_for_Poets.ipynb  1A-Code-as-transformation.ipynb  1B-Code-as-abstraction.ipynb  1C-Pig-latin.ipynb
notebooks/backups/: 1A-Code-as-transformation copy.ipynb
python4poets/: __init__.py  imports.py  python4poets.py  utils.py
