[metadata]
name = python4poets
version = attr: python4poets.__version__
author = 'The Center for Digital Humanities at Princeton'
author_email = 'cdhdevteam@princeton.edu'
description = "Code and resources for poets writing python",
long_description = file: README.md
license="Apache License, Version 2.0",
long_description_content_type = text/markdown
url = https://github.com/Princeton-CDH/python4poets
project_urls =
    Project Home = https://cdh.princeton.edu/
    Bug Tracker = https://github.com/Princeton-CDH/python4poets/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    nltk
    spacy
    pandas
    numpy
    tqdm

[options.extras_require]
all =
    %(dev)s
    %(test)s
dev =
    black>=22.10.0
    pre-commit>=2.20.0
    tox
    sphinx
    twine
    wheel
    pytest-cov
test =
    pytest>=7.2
    pytest-ordering
